--- a/BuscaCEP/BuscaCEP/MainPage.xaml
+++ b/BuscaCEP/BuscaCEP/MainPage.xaml
@@ -27,7 +27,7 @@
         <Label></Label>
         <Label Text="DDD" TextColor="#002c54" HorizontalTextAlignment="Center" TextDecorations="Underline"></Label>
         <Label x:Name="lblDdd" TextColor="#002c54" HorizontalTextAlignment="Center"></Label>
-        
+        <Label></Label>
     </StackLayout>
 
 </ContentPage>
