--- a/BuscaCEP/BuscaCEP/MainPage.xaml
+++ b/BuscaCEP/BuscaCEP/MainPage.xaml
@@ -11,7 +11,7 @@
 
         <Entry x:Name="entCep" Keyboard="Numeric" TextColor="Azure" MaxLength="8" Placeholder="Digite o CEP com 8 dígitos" PlaceholderColor="#ffd400" HorizontalTextAlignment="Center"></Entry>
 
-        <Button x:Name="btnBuscar"  HorizontalOptions="Center" Text="Buscar" BackgroundColor="#ffd400" TextColor="#002c54" Clicked="btnBuscar_Clicked"></Button>
+        <Button x:Name="btnBuscar"  HorizontalOptions="Center" Text="Buscar" BackgroundColor="#ffd400" TextColor="#002c54" Clicked="btnBuscaCep_Clicked"></Button>
 
 
         <Label x:Name="lblresultado"  HorizontalTextAlignment="Center" TextColor="#ffd400" FontSize="36"/>
